--- a/style.css
+++ b/style.css
@@ -1,15 +1,32 @@
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#index_html {
+    display: block;
+    height: auto;
+    margin-bottom: 200px;
+}
+
+#calender_html {
+    display: none;
+    height: 100vh;
+}
+
+#log_html {
+    display: none;
+    height: 100vh;
 }
 
 
 body {
     display: flex;
     flex-flow: column nowrap;
-    margin-top: 30px;
     justify-content: flex-start;
     background-color: #FFFCFF;
-    width: 96vw;
+    width: 100vw;
     height: auto;
     padding-bottom: 100px;
     margin-bottom: 50px;
@@ -20,18 +37,16 @@ header {
     color: black;
     height: auto;
     margin-bottom: 30px;
-    align-self: center;
 }
 h1 {
-    justify-self: top;
+    text-align: center;
+    margin-top: 30px;
 }
 
 #date{
     text-align: center;
-    margin-top: -20px;
 }
 .container {
-  
     width: 100%;
     height: 100%;
 }
@@ -41,11 +56,16 @@ h1 {
     flex-flow: column;
     align-items: center;
     width: 90%;
-    align-self: center;
     padding: 5px;
     border: black solid 1px;
     border-radius: 5px;
     margin-bottom: 30px;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
 }
 input{
     border: none;
@@ -111,7 +131,6 @@ button {
     color: black;
     background-color: crimson;
     font-size: 2vh;
-    
 }
 .button-container{
     width: 99%;
@@ -141,7 +160,8 @@ button {
 .add-exercise {
     position: fixed;
     bottom: 10%;
-    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
     color: #FFFCFF;
     width: 16%;
     height: 6vh;
@@ -151,7 +171,8 @@ button {
     align-self: center;
     justify-self: center;
     text-align: center;
-    border-radius: 30px; 
+    border-radius: 30px;
+    z-index: 10;
 }
 
 #text-box {
